--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <h2>Контакты</h2>
             <p>📍 г. Ташкент, Университет геологических наук</p>
             <p>💼 Кафедра «Геология минеральных ресурсов»</p>
-            <p>📧 <em>Ваш рабочий e-mail</em></p>
+            <p>📧 <em>nasilloyevich@gmail.com</em></p>
             <button style="background: var(--accent-color); color: white; border: none; padding: 10px 20px; border-radius: 8px; cursor: pointer; width: 100%;">
                 Связаться со мной
             </button>
@@ -167,4 +167,5 @@
 </div>
 
 </body>
+
 </html>
