--- a/index.html
+++ b/index.html
@@ -155,9 +155,10 @@
             <p>📍 г. Ташкент, Университет геологических наук</p>
             <p>💼 Кафедра «Геология минеральных ресурсов»</p>
             <p>📧 <em>nasilloyevich@gmail.com</em></p>
-            <button style="background: var(--accent-color); color: white; border: none; padding: 10px 20px; border-radius: 8px; cursor: pointer; width: 100%;">
-                Связаться со мной
-            </button>
+            <a href="mailto:nasilloyevich@gmail.com?subject=Вопрос с сайта Собира Уринова&body=Здравствуйте, Собир Насиллоевич!" 
+   style="display: block; background: var(--accent-color); color: white; border: none; padding: 10px 20px; border-radius: 8px; cursor: pointer; text-decoration: none; text-align: center;">
+    Связаться со мной
+            </a>
         </div>
     </div>
 
@@ -169,3 +170,4 @@
 </body>
 
 </html>
+
