--- a/index.html
+++ b/index.html
@@ -154,10 +154,11 @@
             <h2>Контакты</h2>
             <p>📍 г. Ташкент, Университет геологических наук</p>
             <p>💼 Кафедра «Геология минеральных ресурсов»</p>
-            <p>📧 <em>Ваш рабочий e-mail</em></p>
-            <button style="background: var(--accent-color); color: white; border: none; padding: 10px 20px; border-radius: 8px; cursor: pointer; width: 100%;">
-                Связаться со мной
-            </button>
+            <p>📧 <em>nasilloyevich@gmail.com</em></p>
+           <a href="mailto:nasilloyevich@gmail.com?subject=Вопрос с сайта Собира Уринова&body=Здравствуйте, Собир Насиллоевич!" 
+   style="display: block; background: var(--accent-color); color: white; border: none; padding: 10px 20px; border-radius: 8px; cursor: pointer; text-decoration: none; text-align: center;">
+    Напишите мне!
+           </a>
         </div>
     </div>
 
@@ -167,4 +168,5 @@
 </div>
 
 </body>
+
 </html>
