--- a/index.html
+++ b/index.html
@@ -230,6 +230,32 @@
         </ul>
     </div>
 
+    <div class="section contact-info">
+        <h2>
+            <span lang="ru">Контактная информация</span>
+            <span lang="uz">Kontakt ma'lumotlari</span>
+            <span lang="en">Contact Information</span>
+        </h2>
+        <p>📍 
+            <span lang="ru">г. Ташкент, Университет геологических наук</span>
+            <span lang="uz">Toshkent sh., Geologiya fanlari universiteti</span>
+            <span lang="en">Tashkent, University of Geological Sciences</span>
+        </p>
+        <p>💼 
+            <span lang="ru">Кафедра «Геология минеральных ресурсов»</span>
+            <span lang="uz">«Mineral resurslar geologiyasi» kafedrasi</span>
+            <span lang="en">"Geology of Mineral Resources" Department</span>
+        </p>
+        <p>📧 <strong>nasilloyevich@gmail.com</strong></p>
+        <br>
+        <a href="mailto:nasilloyevich@gmail.com?subject=Inquiry from Website&body=Здравствуйте, Собир Насиллоевич!" 
+           style="display: block; background: var(--accent-color); color: white; border: none; padding: 12px 20px; border-radius: 8px; cursor: pointer; text-decoration: none; text-align: center; font-weight: bold;">
+            <span lang="ru">Написать на почту</span>
+            <span lang="uz">Menga xat yozing</span>
+            <span lang="en">Send an Email</span>
+        </a>
+    </div>
+
     <div class="footer-contacts">
         © 2026 Уринов С.Н. | <span lang="ru">Наука и образование</span><span lang="uz">Fan va ta'lim</span><span lang="en">Science & Education</span>
     </div>
